# hackathon-projects

./: .env  .gitignore  App.js  README.md  a.py  app.json  app.py  appAIML.py  appAPP.py  appBLOCKCHAIN.py  appWEB.py  chat.py  chatPdfQuiz.py  db.sqlite3  educonnect.ai  educonnect.py  index.html  index1.html  index2.html  index3.html  ingest.py  lessonPlan.py  main.py  package-lock.json  package.json  pyproject.toml  quizDom.py  quizpdf.py  raft_state.json  req.rest  requirements.txt  requirments.txt  script.js  script1.js  script2.js  script3.js  search.py  style.css  style3.css  vercel.json
AI Maniacs Project Submission/: AI_AID.HTML  AI_Aid.ipynb  Generate_Notes.ipynb  Gradio_is_Generating_Questions.ipynb  README.md  about-us.html  contact.html  features.html  generate_notes.html  generate_questions.html  get_started.html  index.html  languages.html  progress_bar.html  take_test.html
Alpha/: app.py  requirements.txt
BuildAi/: README.md
CEREBRO by Code Hackers/: booksumarise.py
CEREBRO by the Code Hackers/: booksumarise.py
EduBuddy/: README.md  constants.ts  middleware.ts  next.config.mjs  package-lock.json  package.json
Fantastic Duo/: README.md
LessonCraft-1/: README.md  about.html  app.py  contact.html  courses.html  index.html  main.js  python.py
Study Partner/: README.md
TechX/: EduSpot_Automated_Notes_Making_Support_System.ipynb  README.md  app.py  requirements.txt  vercel.json  wsgi.py
android/: build.gradle  settings.gradle
assets/: lot2.json  lot3.json  lot4.json  lot5.json  lot6.json  welcomee.json
client/: package-lock.json  (+2 more)
(+589 files in other folders)
